Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
xserver
xserver
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 890
    • Issues 890
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 96
    • Merge Requests 96
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorg
  • xserverxserver
  • Issues
  • #1110

Closed
Open
Opened Dec 02, 2020 by Mikhail Gavrilov@Mikhail

Xwayland process stuck and begins to consume 100% CPU when I exit from DOOM Eternal

xwayland-backtrace.txt
xwayland-backtrace-2.txt
xwayland-backtrace-3.txt
Xwayland-backtrace4.txt

[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
--Type <RET> for more, q to quit, c to continue without paging--c
syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38		cmpq $-4095, %rax	/* Check %rax for error.  */
(gdb) c
Continuing.
^C
Thread 1 "Xwayland" received signal SIGINT, Interrupt.
0x00005598899d9295 in present_wnmd_event_notify (window=<optimized out>, event_id=107522, ust=2955780141, msc=58939) at ../../present/present_wnmd.c:248
248	        if (vblank->event_id == event_id) {
(gdb) handle SIGPIPE nostop noprint
Signal        Stop	Print	Pass to program	Description
SIGPIPE       No	No	Yes		Broken pipe
(gdb) finish
Run till exit from #0  0x00005598899d9295 in present_wnmd_event_notify (window=<optimized out>, event_id=107522, ust=2955780141, msc=58939)
    at ../../present/present_wnmd.c:248
xwl_present_msc_bump (xwl_present_window=0x55988ab34cc0) at xwayland-present.c:234
234	            xwl_present_free_event(event);
(gdb) 
Run till exit from #0  xwl_present_msc_bump (xwl_present_window=0x55988ab34cc0) at xwayland-present.c:234

Screenshot_from_2020-12-03_02-38-43

$ rpm -qa | grep Xwayland
xorg-x11-server-Xwayland-1.20.9-3.fc34.x86_64
xorg-x11-server-Xwayland-debuginfo-1.20.9-3.fc34.x86_64

$ inxi -bM
System:    Host: fedora Kernel: 5.10.0-0.rc6.90.fc34.x86_64 x86_64 bits: 64 Desktop: GNOME 3.38.1 
           Distro: Fedora release 34 (Rawhide) 
Machine:   Type: Desktop Mobo: ASUSTeK model: ROG STRIX X570-I GAMING v: Rev X.0x serial: <superuser/root required> 
           UEFI: American Megatrends v: 2802 date: 10/21/2020 
Battery:   ID-1: hidpp_battery_0 charge: N/A condition: N/A 
CPU:       Info: 16-Core (2-Die) AMD Ryzen 9 3950X [MT MCP MCM] speed: 2195 MHz min/max: 2200/3500 MHz 
Graphics:  Device-1: Advanced Micro Devices [AMD/ATI] Vega 20 [Radeon VII] driver: amdgpu v: kernel 
           Display: wayland server: Fedora Project X.org 1.20.9 driver: ati,modesetting unloaded: fbdev,radeon,vesa 
           resolution: 3840x2160~60Hz 
           OpenGL: renderer: AMD Radeon VII (VEGA20 DRM 3.40.0 5.10.0-0.rc6.90.fc34.x86_64 LLVM 11.0.0) 
           v: 4.6 Mesa 21.0.0-devel 
Network:   Device-1: Intel Wi-Fi 6 AX200 driver: iwlwifi 
           Device-2: Intel I211 Gigabit Network driver: igb 
Drives:    Local Storage: total: 11.35 TiB used: 10.27 TiB (90.4%) 
Info:      Processes: 697 Uptime: 10h 03m Memory: 31.26 GiB used: 19.38 GiB (62.0%) Shell: Bash inxi: 3.1.08 
Edited Dec 12, 2020 by Mikhail Gavrilov
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: xorg/xserver#1110